@@ -10,37 +10,40 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/players")
 @RequiredArgsConstructor
+@CrossOrigin
 public class PlayerController {
     private final PlayerService playerService;
-    private final Mapper<Player,PlayerDto> playerMapper;
+    private final Mapper<Player, PlayerDto> playerMapper;
 
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
-    List<PlayerDto> getPlayers(){
-        return playerService.getAll().stream()
-                            .map(playerMapper::mapTo)
-                            .collect(Collectors.toList());
+    List<PlayerDto> getPlayers() {
+        return playerService
+                .getAll()
+                .stream()
+                .map(playerMapper::mapTo)
+                .toList();
     }
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
-    PlayerDto createPlayer(){
+    PlayerDto createPlayer() {
         return playerMapper.mapTo(playerService.save(UUID.randomUUID()));
     }
 
     @DeleteMapping("/{player_id}")
     @ResponseStatus(HttpStatus.OK)
-    PlayerDto deletePlayer(@PathVariable(name = "player_id", required = true) final UUID player_id){
-        return playerMapper.mapTo(playerService.delete(player_id));
+    PlayerDto deletePlayer(@PathVariable(name = "player_id", required = true) final UUID playerId) {
+        return playerMapper.mapTo(playerService.delete(playerId));
     }
+
     @GetMapping("/{player_id}")
     @ResponseStatus(HttpStatus.OK)
-    PlayerDto getPlayerById(@PathVariable(name = "player_id", required = true) final UUID player_id) {
-        return playerMapper.mapTo(playerService.getById(player_id));
+    PlayerDto getPlayerById(@PathVariable(name = "player_id", required = true) final UUID playerId) {
+        return playerMapper.mapTo(playerService.getById(playerId));
     }
 }
